--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,21 @@
+@import 'colors';
+
+/*
+1    Links
+2    Header
+3    Footer
+*/
+
+html, body {
+    color: $darkgrey;
+    background: white;
+}
+@media screen and (min-width: 44.375em) {
+    body:not(.custom-background-image):before,
+    body:not(.custom-background-image):after {
+        height: 0;
+    }
+}
 *,
 html,
 body,
@@ -7,16 +25,160 @@ h1, h2, h3, h4, h5, h6,
     font-family: 'aller', arial, sans-serif;
     font-weight: 300;
 }
+h1.entry-title {
+    font-weight: 700;
+    text-transform: uppercase;
+}
+/*--------------------------------------------------------------
+1    Links
+--------------------------------------------------------------*/
+a {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+/*--------------------------------------------------------------
+2    Header
+--------------------------------------------------------------*/
+@media screen and (min-width: 61.5625em) {
+    .site-header {
+        padding: 1em 4.5455%;
+    }
+    .site-branding {
+        margin-top: 0;
+    }
+}
 .social-links-menu {
     list-style: none;
     float: right;
-    border: 1px solid red;
+    color: $lightgrey;
+}
+.social-links-menu a {
+    color: $lightgrey;
+    border: 3px solid $lightgrey;
+    width: 40px;
+    height: 40px;
+}
+.social-links-menu a:hover,
+.social-links-menu a:hover:before {
+    color: $brightgreen;
+    border-color: $brightgreen;
 }
 @media screen and (min-width: 56.875em) {
     .site-header .social-navigation {
         display: block;
     }
 }
-h2 {
-    color: red;
+/*--------------------------------------------------------------
+3    Footer
+--------------------------------------------------------------*/
+.testimonials {
+    background: $paleblue;
+    padding: 4.5455% 4.5455% 10%;
+}
+.site-footer a:link,
+.site-footer a:visited {
+    color: white;
+}
+.site-footer a:hover,
+.site-footer a:active {
+    color: $brightgreen;
+}
+.site-footer .social-links-menu a {
+    color: white;
+    border-color: white;
+    width: 33px;
+    height: 33px;
+}
+.site-footer .social-links-menu a:before {
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+}
+.site-footer .social-links-menu a:hover,
+.site-footer .social-links-menu a:hover:before {
+    color: $brightgreen;
+    border-color: $brightgreen;
+}
+.site-footer {
+    color: white;
+    background: $darkgrey;
+    padding: 1em 4.5455% 4.5455%;
+    position: relative;
+}
+.site-footer:before {
+    position: absolute;
+    background: $darkgrey;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-transform: skewY(1.5deg);
+            transform: skewY(1.5deg);
+    -webkit-transform-origin: bottom right;
+            transform-origin: bottom right;
+    content: '';
+}
+.footer-wrap.site-inner {
+    /* display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; */
+}
+.site-footer ul li {
+    display: inline-block;
+}
+nav.footer-navigation,
+.footer-extras {
+    width: 48%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+}
+.extras-r1,
+.extras-r2 {
+    -webkit-box-flex: 0 0 100%;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+nav.footer-navigation li {
+    width: 50%;
+    float: left;
+    padding: 5px 0;
+    line-height: 1;
+}
+ul.footer-menu {
+    margin-left: 0;
+}
+.footer-extras {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+}
+.site-footer .social-navigation {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+}
+.site-details {
+    /* -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; */
+    margin-top: 3em;
+}
+span.footer-contacts {
+    /* -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; */
 }
