main nav styling and hero images

--- a/_colors.scss
+++ b/_colors.scss
@@ -1,7 +1,7 @@
 $palegrey: #f8f8f8;
-$lightgrey: #bcbcbc;
+$lightgrey: #c6c3c2;
 $darkgrey: #6e6e6e;
 $paleblue: #F0FAFF;
-$lightblue: #1da5ff;
-$darkblue: #005FB9;
-$brightgreen: #6ED200;
+$midblue: #36a9e1;
+$darkblue: #1d61a2;
+$green: #8fc034;
