--- a/style.scss
+++ b/style.scss
@@ -169,14 +169,8 @@ a {
     max-height: 500px;
 }
 .post-thumbnail img {
-    /* width: 100vw; */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    width: 100vw;
 }
-/* */
 
 /*--------------------------------------------------------------
 4    Footer
