full width front page

--- a/style.scss
+++ b/style.scss
@@ -173,6 +173,10 @@ a {
     top: -50%;
     bottom: -50%;
 }
+/* */
+.content-area.home {
+    width: 100%;
+}
 
 /*--------------------------------------------------------------
 4    Footer
