--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,10 @@
     2.1    Main navigation
     2.2    Social navigation
 3    Content
-    3.1    Images
+    3.1    Containers
+    3.2    Headings
+    3.3    Text
+    3.4    Images
 4    Footer
 5    Widgets
 --------------------------------------------------------------*/
@@ -162,7 +165,16 @@ a {
 /*--------------------------------------------------------------
 3    Content
 --------------------------------------------------------------*/
-/* 3.1    Images */
+/* 3.1    Containers */
+.content-area.home {
+    width: 100%;
+}
+/* 3.2    Headings */
+.entry-title {
+    border-bottom: 2px solid;
+}
+/* 3.3    Text */
+/* 3.4    Images */
 .post-thumbnail {
     margin-top: -1.75em;
     overflow: hidden;
