--- a/home-style.scss
+++ b/home-style.scss
@@ -5,6 +5,9 @@
 }
 section {
     margin-bottom: 3em;
+    .testimonials {
+        margin-bottom: 0;
+    }
 }
 .home-news {
     display: -webkit-box;
