--- a/home-style.scss
+++ b/home-style.scss
@@ -5,8 +5,81 @@
 }
 section {
     margin-bottom: 3em;
-    .testimonials {
-        margin-bottom: 0;
+}
+.header-badge {
+    background: $midblue;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 1;
+    width: 30%;
+    position: absolute;
+    right: 0;
+    top: -10em;
+    padding-top: 1em;
+    border-top: 2px solid white;
+
+    h1 {
+        font-size: 20px;
+        position: relative;
+        z-index: 1;
+    }
+
+    span {
+        font-weight: 700;
+        font-size: 26px;
+    }
+}
+.header-badge h1:after {
+    content: '';
+    background: $midblue;
+    -webkit-transform-origin: bottom right;
+            transform-origin: bottom right;
+    -webkit-transform: skewY(-4deg);
+            transform: skewY(-4deg);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+.home-cta {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+.cta-boxes {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+
+    .cta-box {
+        border: 1px solid $green;
+        padding: 1em;
+        margin-bottom: 1em;
+
+        .home-cta-title {
+            text-transform: uppercase;
+            font-weight: 700;
+            color: $darkblue;
+}
+
+        p {
+            max-width: 50%;
+        }
     }
 }
 .home-news {
@@ -24,18 +97,26 @@ section {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
 
     .home-box {
-        border: 1px solid $green;
+        background: $palegrey;
         padding: 1em;
+        margin: 1em;
         margin-bottom: 1em;
 
+        img {
+            margin: -1em -1em 1em;
+            width: 100%;
+        }
+
         p {
-            max-width: 50%;
+            margin-bottom: -1em;
+        }
+
+        button {
+            display: block;
+            width: calc(100% + 1em);
+            margin: 1em -1em -1em;
         }
     }
 }
