--- a/home-style.scss
+++ b/home-style.scss
@@ -103,10 +103,25 @@ section {
         padding: 1em;
         margin: 1em;
         margin-bottom: 1em;
+        -webkit-box-flex: 1;
+            -ms-flex: 1;
+                flex: 1;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
 
-        img {
+        .image {
             margin: -1em -1em 1em;
-            width: 100%;
+            background-size: cover;
+            background-position: center center;
+
+            img {
+                width: 100%;
+            }
         }
 
         p {
@@ -114,9 +129,16 @@ section {
         }
 
         button {
-            display: block;
+            /* display: block; */
             width: calc(100% + 1em);
-            margin: 1em -1em -1em;
+            margin: 1em -1em 0;
+            -ms-flex-item-align: end;
+                align-self: flex-end;
         }
+    }
+    .home-box > * {
+        -webkit-box-flex: 1;
+            -ms-flex: 1 1 100%;
+                flex: 1 1 100%;
     }
 }
