--- a/style.scss
+++ b/style.scss
@@ -96,6 +96,9 @@ a {
     height: 0;
     content: '';
 }
+.main-navigation .current-menu-item.menu-item-has-children > a:after {
+    padding-right: 0;
+}
 .main-navigation li:hover > ul,
 .main-navigation li.focus > ul { /* centres the sub menu */
     right: auto;
