--- a/home-style.scss
+++ b/home-style.scss
@@ -142,12 +142,88 @@ section {
                 flex: 1 1 100%;
     }
 }
+/*--------------------------------------------------------------
+mailchimp
+--------------------------------------------------------------*/
+.mailchimp-form {
+    background: $palegrey;
+    width: 300px;
+    padding: 0 0 10px 10px;
+    position: relative;
+    min-height: 500px;
+    .gform_wrapper .top_label .gfield_label {
+        display: none;
+    }
+    .gform_heading {
+        background: $darkblue;
+        color: white;
+        margin-bottom: 1em;
+        padding: 10px;
+        position: absolute;
+        .gform_description {
+            font-weight: 100;
+            font-size: 2.2em;
+        }
+        .gform_description:after {
+            content: '\f003';
+            font-family: 'fontawesome';
+            font-size: 2.2em;
+            position: absolute;
+            right: 1em;
+            top: 0;
+        }
+    }
+    .gform_wrapper input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
+        padding: 1em;
+        background: white;
+    }
+    input.gform_button.button {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: $green;
+        border-radius: 0;
+        font-weight: 300;
+        text-transform: capitalize;
+    }
+    .gform_wrapper .gform_footer input.button,
+    .gform_wrapper .gform_footer input[type=submit],
+    .gform_wrapper .gform_page_footer input.button,
+    .gform_wrapper .gform_page_footer input[type=submit] {
+        width: 100%;
+    }
+
+}
 /* events*/
+/*--------------------------------------------------------------
+metaslider
+--------------------------------------------------------------*/
 body:not(.search-results) article:not(.type-page) .entry-content {
     width: 100%;
     float: none;
 }
-
-.home-keydates h1.entry-title {
-    color: $green;
+.home-events {
+    background: $lightgrey;
+    border-top:4px solid $darkblue;
+}
+.home-events .metaslider .caption-wrap {
+    opacity: 1;
+    color: $darkblue;
+    font-size: 2em;
+    background: transparent;
+    line-height: 3em;
+    height: 200px;
+}
+.home-events .metaslider li {
+    width: 30% !important;
+}
+.home-events .metaslider .caption
+ br {
+    height: 30px;
+}
+.metaslider .caption a {
+    background: #36a9e1;
+    padding: 20px;
+    color: white;
+    display: block;
 }
