--- a/home-style.scss
+++ b/home-style.scss
@@ -2,6 +2,12 @@
 
 .content-area.home {
     width: 100%;
+    margin-right: 0;
+    float: none;
+}
+.content-area .sidebar {
+    float: right;
+    width: 25%;
 }
 section {
     margin-bottom: 3em;
@@ -12,7 +18,7 @@ section {
     text-align: center;
     text-transform: uppercase;
     line-height: 1;
-    width: 30%;
+    width: 25%;
     position: absolute;
     right: 0;
     top: -10em;
@@ -147,30 +153,47 @@ mailchimp
 --------------------------------------------------------------*/
 .mailchimp-form {
     background: $palegrey;
-    width: 300px;
+    width: 100%;
     padding: 0 0 10px 10px;
     position: relative;
-    min-height: 500px;
-    .gform_wrapper .top_label .gfield_label {
-        display: none;
-    }
-    .gform_heading {
-        background: $darkblue;
-        color: white;
-        margin-bottom: 1em;
-        padding: 10px;
-        position: absolute;
-        .gform_description {
-            font-weight: 100;
-            font-size: 2.2em;
+    /* min-height: 500px; */
+    .gform_wrapper {
+        margin: 0;
+        .top_label .gfield_label {
+            display: none;
+        }
+        .gform_heading {
+            background: $darkblue;
+            color: white;
+            margin-bottom: 1em;
+            margin-left: -10px;
+            padding: 10px;
+            position: relative;
+            width: calc(100% + 10px);
+            .gform_description {
+                font-weight: 300;
+                font-size: 1.8em;
+            }
         }
         .gform_description:after {
-            // content: '\f003';
+            /* content: '\f003';*/
             font-family: 'fontawesome';
             font-size: 2.2em;
             position: absolute;
             right: 1em;
             top: 0;
+        }
+        ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+            color: $lightgrey;
+        }
+        ::-moz-placeholder { /* Firefox: ; 19+  */
+            color    :     $lightgrey;
+        }
+        :-ms-input-placeholder     { /*  IE 10+ */
+            color: $lightgrey;
+        }
+        :-moz-placeholder { /* Firefox 18- */
+            color: $lightgrey;
         }
     }
     .gform_wrapper input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
@@ -194,9 +217,34 @@ mailchimp
     }
 
 }
+/*--------------------------------------------------------------
+    sidebar social nav
+--------------------------------------------------------------*/
+.sidebar .social-navigation {
+    margin-top: 2em;
+    ul.social-links-menu {
+        float: none;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        li {
+            margin: 0 5px;
+        }
+        a {
+            color: $darkgrey;
+            border-color: $darkgrey;
+        }
+        a:hover {
+            border-color: $green;
+        }
+    }
+}
 /* events*/
 /*--------------------------------------------------------------
-metaslider
+    metaslider
 --------------------------------------------------------------*/
 body:not(.search-results) article:not(.type-page) .entry-content {
     width: 100%;
