--- a/home-style.scss
+++ b/home-style.scss
@@ -136,12 +136,12 @@ mailchimp
             }
         }
         .gform_description:after {
-            /* content: '\f003';*/
+            content: '\f003';
             font-family: 'fontawesome';
-            font-size: 2.2em;
+            font-size: 2em;
             position: absolute;
-            right: 1em;
-            top: 0;
+            right: 0.25em;
+            top: -10px;
         }
         ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
             color: $lightgrey;
