added full width page template

--- a/home-style.scss
+++ b/home-style.scss
@@ -296,6 +296,9 @@ body:not(.search-results) article:not(.type-page) .entry-content {
     td {
         vertical-align: top;
     }
+    img {
+        display: block;
+    }
 }
 
 
