added full width page template as default

--- a/style.scss
+++ b/style.scss
@@ -42,6 +42,9 @@ a {
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
+a:hover .banner-logo img {
+    opacity: 0.7;
+}
 button,
 .btn,
 a.btn,
@@ -371,6 +374,7 @@ h1.entry-title,
 .entry-title:after {
     left: 100%;
 }
+.page-template-right-sidebar .entry-title:after ,
 .single .entry-title:after {
     display: none;
 }
