--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+@import 'setup';
 @import 'colors';
 
 /*--------------------------------------------------------------
@@ -35,6 +36,9 @@ html,
 body {
     font-family: 'aller', arial, sans-serif;
     font-weight: 300;
+}
+.site {
+    margin: 0;
 }
 
 /*--------------------------------------------------------------
@@ -131,19 +135,35 @@ a.more-link {
 .post-navigation a {
     color: $green;
 }
+.breadcrumbs {
+    margin-bottom: 1em;
+}
 /*--------------------------------------------------------------
 2    Header
 --------------------------------------------------------------*/
 @media screen and (min-width: 61.5625em) {
     .site-header {
         padding: 1em 4.5455% 0;
-        margin-bottom: 1.75em;
+        margin: 0 auto 1.75em;
+        max-width: 1320px;
         position: relative;
         border-bottom: 2px solid $green;
     }
     .site-branding {
         margin-top: 0;
     }
+}
+.site-header:before,
+.site-header:after {
+    content: '';
+    position: absolute;
+    width: 9600px;
+    border-bottom: 2px solid $green;
+    right: 100%;
+    bottom: -2px;
+}
+.site-header:after {
+    left: 100%;
 }
 .site-header-main {
     position: relative;
@@ -154,6 +174,9 @@ a.more-link {
     right: 0;
     bottom: 0;
     margin-bottom: 0;
+}
+.main-navigation {
+    font-family: $main-font;
 }
 .main-navigation a {
     color: $darkgrey;
@@ -371,15 +394,36 @@ section.testimonials {
 
 /* 3.2    Headings */
 h1, h2, h3, h4, h5, h6,
-.entry-title,
+.entry-content h2,
+.entry-content h3,
+.entry-content h4,
+.entry-content h5,
+.entry-content h6,
+.entry-summary h1,
+.entry-summary h2,
+.entry-summary h3,
+.entry-summary h4,
+.entry-summary h5,
+.entry-summary h6,
+.comment-content h2,
+.comment-content h3,
+.comment-content h4,
+.comment-content h5,
+.comment-content h6,
+.textwidget h2,
+.textwidget h3,
+.textwidget h4,
+.textwidget h5,
+.textwidget h6,
 .widget-title {
     font-family: 'Aller', arial, sans-serif;
     font-weight: 300;
-    text-transform: uppercase;
 }
+
 h1.entry-title,
 .comments-title,
 .comment-reply-title {
+    font-family: 'Aller', arial, sans-serif;
     font-weight: 700;
     text-transform: uppercase;
 }
@@ -441,6 +485,11 @@ p.post-authors {
         margin-left: -1em;
     }
 }
+.entry-content ul.menu li:before {
+    content: '';
+    padding: 0;
+    margin: 0;
+}
 
 /* 3.4    Images */
 .post-thumbnail {
@@ -479,6 +528,73 @@ p.post-authors {
 }
 
 /* Forms */
+.elementor-widget-wp-widget-gform_widget .elementor-widget-container {
+    background: $palegrey;
+    width: 100%;
+    padding: 0 0 10px 10px;
+    position: relative;
+    /* min-height: 500px; */
+    .gform_wrapper {
+        margin: 0;
+        .top_label .gfield_label {
+            display: none;
+        }
+        .gform_heading {
+            background: $darkblue;
+            color: white;
+            margin-bottom: 1em;
+            margin-left: -10px;
+            padding: 10px;
+            position: relative;
+            width: calc(100% + 10px);
+            .gform_description {
+                font-weight: 300;
+                font-size: 1.8em;
+            }
+        }
+        .gform_description:after {
+            content: '\f003';
+            font-family: 'fontawesome';
+            font-size: 2em;
+            position: absolute;
+            right: 0.25em;
+            top: -10px;
+        }
+        ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+            color: $lightgrey;
+        }
+        ::-moz-placeholder { /* Firefox: ; 19+  */
+            color    :     $lightgrey;
+        }
+        :-ms-input-placeholder     { /*  IE 10+ */
+            color: $lightgrey;
+        }
+        :-moz-placeholder { /* Firefox 18- */
+            color: $lightgrey;
+        }
+    }
+    .gform_wrapper input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
+        padding: 1em;
+        background: white;
+    }
+    input.gform_button.button {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: $green;
+        border-radius: 0;
+        font-weight: 300;
+        text-transform: capitalize;
+    }
+    .gform_wrapper .gform_footer input.button,
+    .gform_wrapper .gform_footer input[type=submit],
+    .gform_wrapper .gform_page_footer input.button,
+    .gform_wrapper .gform_page_footer input[type=submit] {
+        width: 100%;
+    }
+
+}
+
 
 /* 3.5  Blog */
 .blog article {
