--- a/mobile-menu/css/styles.css
+++ b/mobile-menu/css/styles.css
@@ -27,144 +27,145 @@
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
+@media screen and (max-width: 700px) {
+  header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
 
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
+  .sliding--menu__wrapper {
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    margin-right: auto;
+    position: relative;
+    z-index: 1000;
+  }
+  .sliding--menu__wrapper nav {
+    position: fixed;
+    width: 280px;
+    height: 100%;
+    -webkit-transition: all 200ms ease-in;
+    transition: all 200ms ease-in;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    margin: 0 0 0 -280px;
+  }
+  .sliding--menu__wrapper nav ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    background: #6e6e6e;
+    overflow: hidden;
+    width: 280px;
+    height: 100%;
+    font-family: 'Aller', Arial, sans-serif;
+    font-weight: 300;
+  }
+  .sliding--menu__wrapper nav li {
+    border-bottom: 1px solid #252525;
+  }
+  .sliding--menu__wrapper nav a {
+    color: #fff;
+    display: block;
+    padding: 15px;
+  }
+  .sliding--menu__wrapper nav a:hover,
+  .sliding--menu__wrapper nav .current-menu-item {
+    background: #8fc034;
+  }
+  .sliding--menu__wrapper label {
+    display: block;
+    font-weight: 700;
+    width: 56px;
+    height: 56px;
+    line-height: 56px;
+    color: #fff;
+    text-align: center;
+    font-size: 2em;
+    position: fixed;
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    transition: all 200ms ease-in;
+  }
+  .sliding--menu__wrapper .obfuscator {
+    visibility: hidden;
+    -webkit-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 280px;
+    z-index: 4;
+    -webkit-transition-duration: .5s;
+            transition-duration: .5s;
+  }
+  .sliding--menu__wrapper input[type="checkbox"] {
+    display: none;
+  }
+  .sliding--menu__wrapper input[type="checkbox"]:checked ~ nav {
+    margin-left: 0;
+  }
+  .sliding--menu__wrapper input[type="checkbox"]:checked ~ label {
+    background: #6e6e6e;
+   /* left: 260px;*/
+    left: 0;
+    z-index: 1001;
+    position: relative;
+  }
+  .sliding--menu__wrapper input[type="checkbox"]:checked ~ label .icon-menu:before {
+    content: "\f00d";
+  }
+  .sliding--menu__wrapper input[type="checkbox"]:checked ~ .obfuscator {
+    visibility: visible;
+    pointer-events: auto;
+    background: #6e6e6e;
+    width: 280px;
+    z-index: 1;
+  }
 
-.sliding--menu__wrapper {
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  margin-right: auto;
-  position: relative;
-  z-index: 1000;
-}
-.sliding--menu__wrapper nav {
-  position: fixed;
-  width: 280px;
-  height: 100%;
-  -webkit-transition: all 200ms ease-in;
-  transition: all 200ms ease-in;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  margin: 0 0 0 -280px;
-}
-.sliding--menu__wrapper nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  background: #6e6e6e;
-  overflow: hidden;
-  width: 280px;
-  height: 100%;
-  font-family: 'Aller', Arial, sans-serif;
-  font-weight: 300;
-}
-.sliding--menu__wrapper nav li {
-  border-bottom: 1px solid #252525;
-}
-.sliding--menu__wrapper nav a {
-  color: #fff;
-  display: block;
-  padding: 15px;
-}
-.sliding--menu__wrapper nav a:hover,
-.sliding--menu__wrapper nav .current-menu-item {
-  background: #8fc034;
-}
-.sliding--menu__wrapper label {
-  display: block;
-  font-weight: 700;
-  width: 56px;
-  height: 56px;
-  line-height: 56px;
-  color: #fff;
-  text-align: center;
-  font-size: 2em;
-  position: fixed;
-  z-index: 2;
-  -webkit-transition: all 200ms ease-in;
-  transition: all 200ms ease-in;
-}
-.sliding--menu__wrapper .obfuscator {
-  visibility: hidden;
-  -webkit-transition: all 0.5s ease-in;
-  transition: all 0.5s ease-in;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 280px;
-  z-index: 4;
-  -webkit-transition-duration: .5s;
-          transition-duration: .5s;
-}
-.sliding--menu__wrapper input[type="checkbox"] {
-  display: none;
-}
-.sliding--menu__wrapper input[type="checkbox"]:checked ~ nav {
-  margin-left: 0;
-}
-.sliding--menu__wrapper input[type="checkbox"]:checked ~ label {
-  background: #6e6e6e;
- /* left: 260px;*/
-  left: 0;
-  z-index: 1001;
-  position: relative;
-}
-.sliding--menu__wrapper input[type="checkbox"]:checked ~ label .icon-menu:before {
-  content: "\f00d";
-}
-.sliding--menu__wrapper input[type="checkbox"]:checked ~ .obfuscator {
-  visibility: visible;
-  pointer-events: auto;
-  background: #6e6e6e;
-  width: 280px;
-  z-index: 1;
-}
-
-.menu-main-nav-container { /* move menu down */
-    margin-top: 102px;
-}
+  .menu-main-nav-container { /* move menu down */
+      margin-top: 102px;
+  }
 
 
-/* right slide menu */
-.sliding--menu__wrapper.slide--right {
-  top: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: 56px;
-}
-.sliding--menu__wrapper.slide--right nav {
-  position: fixed;
-  width: 250px;
-  height: 100%;
-  -webkit-transition: all 200ms ease-in;
-  transition: all 200ms ease-in;
-  z-index: 2;
-  top: 0;
-  right: 0;
-  margin: 0 -250px 0 0;
-  margin-left: auto;
-}
-.sliding--menu__wrapper.slide--right nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  background: #222;
-  overflow: hidden;
-  width: 250px;
-  height: 100%;
-}
-.sliding--menu__wrapper.slide--right input[type="checkbox"]:checked ~ nav {
-  margin-right: 0;
-  margin-left: auto;
-}
-.sliding--menu__wrapper.slide--right input[type="checkbox"]:checked ~ label {
-  right: 260px;
-  margin-left: auto;
+  /* right slide menu */
+  .sliding--menu__wrapper.slide--right {
+    top: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: 56px;
+  }
+  .sliding--menu__wrapper.slide--right nav {
+    position: fixed;
+    width: 250px;
+    height: 100%;
+    -webkit-transition: all 200ms ease-in;
+    transition: all 200ms ease-in;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    margin: 0 -250px 0 0;
+    margin-left: auto;
+  }
+  .sliding--menu__wrapper.slide--right nav ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    background: #222;
+    overflow: hidden;
+    width: 250px;
+    height: 100%;
+  }
+  .sliding--menu__wrapper.slide--right input[type="checkbox"]:checked ~ nav {
+    margin-right: 0;
+    margin-left: auto;
+  }
+  .sliding--menu__wrapper.slide--right input[type="checkbox"]:checked ~ label {
+    right: 260px;
+    margin-left: auto;
+  }
 }
 
