refined mobile menu styling

--- a/home-style.scss
+++ b/home-style.scss
@@ -21,8 +21,12 @@
     }
 }
 
-.breadcrumbs {
+.home .breadcrumbs {
     display: none;
+}
+
+.home .site-content {
+    margin-top: 6em;
 }
 
 .content-area.home {
