--- a/style.scss
+++ b/style.scss
@@ -171,6 +171,15 @@ a.more-link {
 .site-header:after {
     left: 100%;
 }
+@media screen and (max-width: 960px){
+    .site-header:before,
+    .site-header:after {
+        border-bottom: none;
+        width: 0;
+        right: 0;
+        left: 0;
+    }
+}
 .site-header-main {
     position: relative;
 }
@@ -365,7 +374,7 @@ section.testimonials {
 }
 .site-content {
     position: relative;
-    margin-top: 6em;
+    margin-top: 3em;
 }
 .content-area.home {
     width: 100%;
@@ -535,7 +544,6 @@ p.post-authors {
     position: absolute;
     bottom: 0;
 }
-
 .featured-caption {
     z-index: 2;
     color: white;
@@ -545,6 +553,11 @@ p.post-authors {
 .post-thumbnail img {
     width: 100vw;
     z-index: 1;
+}
+@media screen and (min-width: 960px) and (max-width: 1280px) {
+    .post-thumbnail {
+        max-height: 360px;
+    }
 }
 @media screen and ( max-width: 600px ) {
     .featured-caption {
