--- a/style.scss
+++ b/style.scss
@@ -2,12 +2,13 @@
 @import 'colors';
 
 /*--------------------------------------------------------------
-1    Links
-2    Header
+1   Links
+2   Header
     2.1    Main navigation
     2.2    Social navigation
     2.3    Post Navigation
     2.4    Page Navigation Menus
+    2.5    Top Page Nav
 3    Content
     3.1    Containers
     3.2    Headings
@@ -15,9 +16,10 @@
         3.3.1   Lists
     3.4    Images
     3.5    Blog
-4    Footer
-5    Widgets
-6    Elementor
+4   Footer
+5   Widgets
+6   Elementor
+7   Scrollup
 --------------------------------------------------------------*/
 
 html, body {
@@ -53,9 +55,7 @@ a:hover .banner-logo img {
 }
 button,
 .btn,
-button.btn,
 a .btn,
-input[type="submit"],
 .elementor-tab-title {
     color: white;
     background: $green;
@@ -74,18 +74,12 @@ button:hover:after,
 .btn:hover:after,
 .btn a:hover,
 a .btn:hover:after,
-button.btn:hover,
-button.btn:hover:after,
-input[type="submit"]:hover,
-input[type="submit"]:hover:after {
+button.btn:hover:after {
     background: $darkblue;
 }
 button:after,
 .btn:after,
-button.btn:after,
 a .btn:after,
-:not(button.menu-toggle:after),
-input[type="submit"]:after,
 .elementor-tab-title.active :after {
     content: '';
     position: absolute;
@@ -107,7 +101,8 @@ button.comments-link {
 button.comments-link a:link,
 button.comments-link a:visited {
     color: white;
-}button.comments-link a:hover,
+}
+button.comments-link a:hover,
 button.comments-link a:active {
     color: white;
     -webkit-box-shadow: none;
@@ -142,6 +137,12 @@ a.more-link {
 }
 .breadcrumbs {
     margin-bottom: 1em;
+    a:link, a:visited {
+        color: $darkgrey;
+    }
+    a:hover, a:active {
+        color: $green;
+    }
 }
 @media screen and (max-width: 700px) {
     .breadcrumbs {
@@ -349,12 +350,61 @@ a.more-link {
         }
     }
 }
-/* 2.5 Mobile Navigation */
-@media screen and (min-width: 910px) {
-    .sliding--menu__wrapper {
-        display: none;
+
+/* 2.5 Top Page Nav */
+.top-nav {
+    padding: 1em 0;
+    font-size: 1em;
+    ul {
+        list-style: none;
+        margin-left: 0;
+        padding: 1em 0;
+        border-bottom: 2px solid $green;
+        margin-bottom: 0;
+        position: relative;
+    }
+    li {
+        display: block;
+        float: left;
+        margin-top: -1em;
+        margin-right: 1em;
+    }
+    a:link,
+    a:visited {
+        color: $darkgrey;
+        padding: 0.65625em 0.875em;
+        line-height: 1.3125;
+        white-space: nowrap;
+    }
+    a:hover,
+    a:active {
+        color: $green;
+    }
+    a:first-of-type {
+        padding-left: 0;
+    }
+    .current-menu-item a {
+        color: $green;
     }
 }
+.top-nav ul:before,
+.top-nav ul:after {
+    content: '';
+    position: absolute;
+    width: 9600px;
+    border-bottom: 2px solid $green;
+    right: 100%;
+    bottom: -2px;
+}
+.top-nav ul:after {
+    left: 100%;
+}
+.top-nav:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
 .anchor {
     margin-top: 1em;
 }
@@ -842,4 +892,73 @@ span.footer-contacts {
 --------------------------------------------------------------*/
 .elementor-column-gap-default>.elementor-row>.elementor-column>.elementor-element-populated {
     padding: 0;
+}
+/*--------------------------------------------------------------
+7   Scrollup
+--------------------------------------------------------------*/
+a#scrollup {
+    background-color: $green;
+    color: #fff;
+    display: none;
+    -webkit-font-smoothing: antialiased;
+    font: normal 24px/1 'fontawesome';
+    padding: 0 10px 5px;
+    position: fixed;
+    right: 20px;
+    bottom: 42px;
+    text-decoration: none;
+    vertical-align: top;
+    opacity: 0.9;
+    filter:alpha(opacity=80); /* For IE8 and earlier */
+    z-index: 999;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+a#scrollup:before {
+    content: '\f0d8';
+}
+a#scrollup:hover {
+    opacity: 1;
+    filter:alpha(opacity=100); /* For IE8 and earlier */
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+@media screen and (max-width: 767px) {
+
+    a#scrollup {
+        font-size: 22px;
+        padding: 3px;
+        bottom: 20px;
+    }
+
+}
+/*-----------------------------------------
+8   Events Calendar
+-----------------------------------------*/
+.entry-content ul.tribe-bar-views-list li:before,
+.entry-content ul.tribe-related-events li:before {
+    content: '';
+}
+.tribe-events-list .tribe-events-loop .tribe-events-event-image {
+    display: none;
+}
+.type-tribe_events.tribe-events-photo-event .tribe-events-photo-event-wrap {
+    border: 0;
+    background: #36a9e1;
+    a {
+        color: white;
+    }
+}
+a.tribe-event-url {
+    text-decoration: none !important;
+}
+.type-tribe_events.tribe-events-photo-event .tribe-events-photo-event-wrap:hover {
+    background: $darkgrey;
+}
+.tribe-events-list .tribe-events-loop .tribe-events-content,
+.tribe-event-time {
+    display: none;
+}
+.tribe-events-photo .tribe-events-loop .type-tribe_events .tribe-events-event-meta {
+    color: white;
 }
