--- a/style.scss
+++ b/style.scss
@@ -419,6 +419,7 @@ a.more-link {
 /* 3.1    Containers */
 .site-main {
     position: relative;
+    margin-bottom: 1em;
 }
 .site-main > article {
     margin-bottom: 0;
